# reclaim_backup

./: .cz.toml  .env.example  .gitignore  .pre-commit-config.yaml  COMMIT_GUIDE.md  README.md  compose.yml
backend/: main.py  pyproject.toml
backend/api/: documents.py  policies.py  reimbursements.py  schemas.py  test_ui.py
backend/core/: models.py
backend/engine/: llm.py
backend/engine/agents/: compliance_agent.py  document_agent.py
backend/engine/prompts/: compliance_prompts.py
backend/engine/tools/: change_detector.py  generate_reimbursement_template.py  rag_tool.py
backend/test/: agent_workflows.md  demo.html
docs/ai-templates/pitch-deck/: slides.html
docs/ai-templates/qatd/: QATD_Report.md
docs/ai-templates/sad/: SAD_Mermaid_Diagram.md  SAD_Report.md  SAD_Template.md  core_workflow.md
docs/superpowers/plans/: 2026-04-25-glm-health-check-fallback.md
docs/superpowers/specs/: 2026-04-25-glm-health-check-fallback-design.md
frontend/: package-lock.json  proxy.ts
frontend/app/: page.tsx
frontend/app/employee/_components/: SideNav.tsx  TopNav.tsx
frontend/app/employee/claims/: page.tsx
frontend/app/employee/dashboard/: page.tsx
frontend/app/employee/history/: page.tsx
frontend/app/employee/settings/: page.tsx
frontend/app/hr/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/claims/: FilterPanel.tsx
frontend/context/: AuthContext.tsx
frontend/lib/actions/: auth.ts  claims.ts  dashboard.ts  hr.ts  notifications.ts  policies.ts  settings.ts
frontend/lib/api/: client.ts  types.ts
(+11 files in other folders)
